[package]
name = "security-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28"
tui = "0.19"
ping-rs = "0.1.2"
winapi = { version = "0.3", features = ["winbase", "winnt", "iphlpapi"] }
winfw = "0.1.8"